Added endpoint to get all available appoints for patient booking